[project]
name = "playstore-open-ai-review-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "freshlife001",email = "talent@mises.site"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "aiosignal (>=1.3.2,<2.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "cachetools (==5.3.0)",
    "certifi (>=2025.6.15,<2026.0.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "frozenlist (>=1.7.0,<2.0.0)",
    "google-api-core (==2.11.0)",
    "google-api-python-client (==2.85.0)",
    "google-auth (==2.17.3)",
    "google-auth-httplib2 (==0.1.0)",
    "google-auth-oauthlib (==1.0.0)",
    "googleapis-common-protos (==1.59.0)",
    "httplib2 (>=0.22.0,<0.23.0)",
    "idna (>=3.10,<4.0)",
    "multidict (>=6.5.1,<7.0.0)",
    "oauthlib (==3.2.2)",
    "openai (==0.27.4)",
    "protobuf (==4.22.3)",
    "pyasn1 (==0.4.8)",
    "pyasn1-modules (==0.2.8)",
    "pyparsing (==3.0.9)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyyml (==0.0.2)",
    "requests (==2.28.2)",
    "requests-oauthlib (==1.3.1)",
    "rsa (==4.9)",
    "six (==1.16.0)",
    "tqdm (==4.65.0)",
    "uritemplate (==4.1.1)",
    "urllib3 (==1.26.15)",
    "yarl (>=1.20.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
